# code_test

./: .gitignore
c++11_14/: 0  3  CRTP.cpp  README.md  a.out  agl_find_it.cpp  annoymous_fun_gdb_test.cpp  auto.cpp  b.out  boost_json  boost_json.cpp  callback_c++_static_and_bind.cpp  cast_test.cpp  class_test.cpp  condition_varible.cpp  condition_varible_.cpp  constexpr.cpp  copy_assign.cpp  cost_of_user_object.cpp  enum.cpp  explicit_convert.cpp  explicit_test.cpp  function.cpp  future.cpp  future_async.cpp  future_promise.cpp  inline.cpp  lambda_test.cpp  map_erase_by_callback.cpp  map_external_sorting.cpp  map_overriding_[].cpp  map_user_defined_key.cpp  memory_relax.cpp  memory_release-acquire.cpp  memory_sequential_consisten.cpp  muti_inherit.cpp  operator_test  operator_test.cpp  override_final.cpp  parameterFolding.cpp  (+26 more)
c++11_14/class/: a.out  attribute.cpp  move_constructor.cpp
c++11_14/pool_thread/: Makefile  demo  demo.cpp  pool_thread.cpp  pool_thread.h
c/ASLA/: Makefile  alsa.code-workspace  demo  demo.mv  player  player.c  recorder  recorder.c
c/algorithm_test/: a.out  dichotomy_test.c
c/c_standard_func/: a.out  strtoul_test.c
c/char_verity/: ipv6_verity.c
c/close_package/: a.out  closePackage.c
c/file_buff/: a.out  fseek_test.c  write_read.c
c/file_read_write/: aes_test  aes_test.c  aes_test2  aes_test2.c  build.sh  crypt.c  file_read  file_read.c  file_write  file_write.c  test.txt
c/gcc_attribute/: a.out  aligned_test.c  format_test.c  pack_test.c  section_test1.c  section_test1.lds  test_weak1.c  test_weak2.c
c/image_check/: a.out  verifyImage.cpp
c/point_list/: a.out  test.c
c/process_test/: a.out  wait_test.c  waitid_test.c  waitpid_test.c
c/signal_test/: .fuse_hidden0000070600000001  bsd_signal  coredump_record  coredump_record.c  glibc_signal  record_sender_data.c  sigaction_delivery_order  signal_comp.c  signal_delivery_order.c  signal_delivery_order.sh  signal_receive  signal_receive.c  signal_send  signal_send.c  systemcall_signal  sysv_signal
c/socket/: client  client.c  server  server.c
c/thread_pool/: Makefile  demo  demo.c  thread_pool.c  thread_pool.h
c/thread_test/: pthread_has_join  pthread_join_cmp.c  pthread_no_join
component_test/: CMakeLists.txt
component_test/components/: CMakeLists.txt
component_test/components/basic/: CMakeLists.txt
component_test/components/basic/common/: CMakeLists.txt
component_test/components/basic/common/include/: BlockingQueue.h  Condition.h  CurrentThread.h  Mutex.h  Types.h  noncopyable.h
component_test/components/basic/common/src/: Condition.cpp  CurrentThread.cpp
component_test/components/basic/designMode/: FSM.hpp  singleton.hpp
component_test/components/bussiness/: CMakeLists.txt
component_test/components/bussiness/bussiness1/: CMakeLists.txt
component_test/components/bussiness/bussiness1/include/: bussiness1.h
component_test/components/bussiness/bussiness1/src/: bussiness1.cpp
component_test/components/third-part/: CMakeLists.txt
component_test/components/third-part/ncnn/include/ncnn/: platform.h
component_test/components/third-part/opencv/include/opencv4/opencv2/: cvconfig.h
component_test/components/third-part/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
component_test/components/third-part/spdlog/: CMakeLists.txt
component_test/config/cmake/: compile_env.cmake  config_table.cmake  global_set.cmake
component_test/test/: CMakeLists.txt
component_test/test/bussiness1/: CMakeLists.txt  bussiness_test1.cpp
component_test/test/fsm/: CMakeLists.txt  fsm_test.cpp
component_test/test/opencv/: CMakeLists.txt  opencv_test.cpp
component_test/test/spdlog/: CMakeLists.txt
ffmpeg/: carmera_to_trmp.sh
ffmpeg/convert_jpegPic_2_h264/: jpeg2h264.c
ffmpeg/save_h264_2_mp4/: saveH264Stream.c
ffmpeg/save_h264_2_pic/: save_h264_2_bmp.c  save_h264_2_fpeg.c
gdb_test/: hello  hello.cpp
gdb_test/gdb_test/: a.out  bt_test  bt_test.c  corefile.c  signal_kill.c  test  test.c
gdb_test/python_test/: python_test.py
linux/: awk.sh  cal.awk
linux_driver_test/: README.md
linux_driver_test/asynio/: Makefile  asynio.c  asynio.h  asynioApp.c
linux_driver_test/blockIo/: Makefile  blockIo.c  blockIo.h  blockIoApp.c
linux_driver_test/charDriver/: Makefile  charDriver.c  charDriver.h  charDriverApp.c
linux_driver_test/dmaMmap/: .dmaMmap.ko.cmd  .dmaMmap.mod.o.cmd  .dmaMmap.o.cmd  Makefile  dmaMmap.c  dmaMmap.h  dmaMmap.ko  dmaMmap.mod.c  dmaMmapAPP.c  dmaMmapApp  modules.order  workspace.code-workspace
linux_driver_test/dmaMmap/.tmp_versions/: dmaMmap.mod
linux_driver_test/dmaenginetest/: Makefile  build.sh  dmaengineDriverTest.c  dmaengineDriverTestApp.c
linux_driver_test/ioControlDriver/: Makefile  ioControlDriver.c  ioControlDriver.h  ioControlDriverApp.c
linux_driver_test/noblockIo/: Makefile  noblockIo.c  noblockIoApp.c  noblockPollApp  noblockPollApp.c
linux_driver_test/udmabuf/: .u-dma-buf.ko.cmd  .u-dma-buf.mod.o.cmd  .u-dma-buf.o.cmd  Makefile  dmatest  modules.order  u-dma-buf.ko  u-dma-buf.mod.c  u-dma-buf_test.c  workspace.code-workspace
opencv_test/: CMakeLists.txt  ncnn_yolov5.cpp  opencv_camera_yolov5.cpp  opencv_test.cpp
python_test/bluetoothTest/: client.py
python_test/csv_convert/: convert.sh  convert_mocap_data.py
python_test/csv_convert/ry/: 2021-01-17-10-32-44.bag  2021-01-17-10-47-46.bag  convert_cos.py  (+24 more)
python_test/file_change/: change_current_direction.py  plot_torque.py  temp_read.txt  temp_save.txt  test.py
python_test/mqtt_test/: publish.py  subscribe.py
python_test/pyautogui/: test_run.py
qt/Qt-BLE-Tester/: bleinterface.cpp  mainwindow.cpp  mainwindow.ui
qt/qtsqlDemo/: Makefile  header.h  jony  main.cpp  mysql.cpp  mysql.h  qtsqlDemo  qtsqlDemo.pro  qtsqldemo.cpp  qtsqldemo.h  qtsqldemo.ui
sql/: a.out  jony.sql  test.c
sql/__MACOSX/: ._mysqldemo.sql
stdio/: a.out  file.txt  fread_fwrite_fseek.c  function_point_test.c  get_char.c  hello.c  jump.c  parse_option.c  return_list.c  set_buf.c  sizeof_test.c  stdio_test.c  temp.txt  two_point.c
(+472 files in other folders)
