include(${PROJECT_SOURCE_DIR}/config/cmake/global_set.cmake)

string(REGEX REPLACE "/$" "" CURRENT_FOLDER_ABSOLUTE ${CMAKE_CURRENT_SOURCE_DIR})
string(REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CURRENT_FOLDER_ABSOLUTE})
# MESSAGE (STATUS ${CURRENT_FOLDER})

string(REGEX REPLACE "(.*)/${CURRENT_FOLDER}$" "\\1" SECOND_FOLDER_ABSOLUTE ${CURRENT_FOLDER_ABSOLUTE})
string(REGEX REPLACE ".*/(.*)" "\\1" SECOND_FOLDER ${SECOND_FOLDER_ABSOLUTE})
# MESSAGE (STATUS ${SECOND_FOLDER})

## installing
# Library
install (DIRECTORY ./lib/
    DESTINATION ${OPTPUT_PATH}${SECOND_FOLDER}/${CURRENT_FOLDER}/lib)

# Header files
install(DIRECTORY ./include/ 
    DESTINATION ${OPTPUT_PATH}${SECOND_FOLDER}/${CURRENT_FOLDER}/include)
